--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,11 +15,11 @@
     color: #1abc9c !important;
 }
 
-.footer-padding {
+footer-padding {
 	padding-bottom: 60px;
 }
 
-.footer {
+footer {
 	position: absolute;
 	text-align: center;
 	bottom: 0;
@@ -28,8 +28,8 @@
 	background-color: #1abc9c;
 }
 
-.footer p {
+footer p {
 	margin-top: 25px;
 	font-size: 12px;
-  color: #fff;
+    color: #fff;
 }
