--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,11 @@
-
 </div>
-<div class="footer-padding"></div>
-  <div class="footer">
+<footer>
+  <!-- <div class="footer-padding"></div> -->
+  <!-- <div class="footer"> -->
     <p>Made with ❤️ by The App Brewery</p>
-  </div>
+  <!-- </div> -->
+</footer>
 </div>
 </body>
+
 </html>
