--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,8 +1,6 @@
 <%- include("partials/header") %> 
-<header>
-  <h1><%= postTitle %> </h1>
-</header>
 <main>
-  <p><%= postContent %> </p>
+  <h1><%= title %> </h1>
+  <p><%= content %> </p>
 </main>
 <%- include("partials/footer") %> 
